# n64-rat-tool

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md
romtool/: __init__.py  __main__.py  cli.py  db.py  dumpview.py  exporter.py  models.py  rom.py  scanner.py  segments.py
romtool/profiles/: __init__.py  base.py  generic_n64.py
tests/: conftest.py  test_cache.py  test_db_and_import.py  test_dump_range.py  test_export.py  test_rom.py  test_scan_features.py  test_scanner.py  test_segments.py
